[package]
name = "terminus-spaceport"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"
license = "MIT"
description = "Memory utils libary for c/c++ and verilog simulation"
include= ["csrc", "ctest", "vsrc", "vtest", "src", "build.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
regex = "1"

[lib]
name = "terminus_spaceport"
crate-type = ["rlib","staticlib", "dylib"]

[dependencies]
lazy_static = "1.4"
terminus-spaceport-proc-macros = { path = "proc_macros" }
termios = "*"
libc = "0.2.68"
ctrlc = {version = "3.1.4", features = ["termination"]}
intrusive-collections = "0.9.0"

[dev-dependencies]
rand = "0.7.3"
jemallocator = "0.3"
jemalloc-sys = {version = "0.3", features = ["stats"]}

[[bench]]
name = "bench"
path = "benchs/bench.rs"

[[example]]
name = "console_hello"
path = "experiments/console_hello.rs"

[features]
memprof = []