[package]
name = "dpi-memory-proc-macros"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
dpi-memory = { path = ".." }

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0"
